# paperbot

./: .env.example  .eslintrc.cjs  .gitignore  .swcrc  openapi.json  package-lock.json  package.json  tsconfig.json
prisma/: database.db  schema.prisma
prisma/migrations/20221226025901_init/: migration.sql
prisma/migrations/20221226030942_made/: migration.sql
prisma/migrations/20221227140048_made/: migration.sql
prisma/migrations/20230104211038_added/: migration.sql
prisma/migrations/20230104212104_made/: migration.sql
prisma/migrations/20230104230021_added/: migration.sql
prisma/migrations/20230106171318_added/: migration.sql
scripts/: chatgpt.ts  magic-prompt.py  pyproject.toml
src/: main.ts
src/api/: chatgpt.ts  discordAPI.ts  huggingface.ts  magespace.ts  magicprompt.ts  stablediffusion-v2-colab.ts  stablediffusion-v2.ts  stablediffusion.ts  uberduck.ts  uberduckVoiceData.ts
src/commands/: chatgpt.ts  config-sd.ts  diffuse.ts  img-diffuse.ts  index.ts  inspire.ts  load-image.ts  magic-prompt.ts  meditate.ts  ms.ts  ping.ts  sd.ts  sd2.ts  sd2colab.ts  tts.ts
src/types/: global.d.ts  openapi.d.ts
src/utils/: adapter.ts  channel.ts  filter.ts  get.ts  image.ts  rawEvent.ts  voice.ts
